--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-connect": "^3.2.2",
     "gulp-livereload": "^3.8.1",
     "gulp-minify-css": "^1.2.4",
     "gulp-ruby-sass": "^2.0.6",
+    "gulp-webserver": "^0.9.1",
     "tiny-lr": "^0.2.1"
   },
   "name": "basic-app",
