--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-clean": "^0.3.2",
     "gulp-connect": "^3.2.2",
     "gulp-livereload": "^3.8.1",
     "gulp-minify-css": "^1.2.4",
     "gulp-ruby-sass": "^2.0.6",
+    "gulp-sass": "^2.2.0",
     "gulp-webserver": "^0.9.1",
     "tiny-lr": "^0.2.1"
   },
@@ -40,5 +42,6 @@
   "bugs": {
     "url": "https://github.com/marcelobohn/basic-app/issues"
   },
-  "homepage": "https://github.com/marcelobohn/basic-app#readme"
+  "homepage": "https://github.com/marcelobohn/basic-app#readme",
+  "readme": "README.md"
 }
