--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "gulp-clean": "^0.3.2",
     "gulp-connect": "^3.2.2",
     "gulp-livereload": "^3.8.1",
+    "gulp-minify": "0.0.7",
     "gulp-minify-css": "^1.2.4",
+    "gulp-minify-html": "^1.0.6",
     "gulp-ruby-sass": "^2.0.6",
     "gulp-sass": "^2.2.0",
     "gulp-webserver": "^0.9.1",
