--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-clean": "^0.3.2",
     "gulp-connect": "^3.2.2",
+    "gulp-inject": "^4.0.0",
     "gulp-livereload": "^3.8.1",
     "gulp-minify": "0.0.7",
     "gulp-minify-css": "^1.2.4",
